--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -80,7 +80,7 @@
 
 <h2 id="toc0">Types of feedback</h2>
 <p>There are 3 types of feedback you can give the CRA:</p>
-	<ul class="fa-ul colcount-sm-2 small">
+	<ul class="fa-ul colcount-sm small">
                                     <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Compliment - Submit a positive experience you had with the CRA</li>
                                     <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Suggestion - Give your idea on how to improve the CRA</li>
                                     <li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Complaint - Tell us about a problem you had with the CRA</li>
