--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -448,7 +448,7 @@
 <p><strong>Do not</strong> report the amount of the payment if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
 </dd>
 <dt>Non-registered plan</dt>
-<dd></dd>
+<dd>Report the payments you made from a pension fund or plan that is not registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 <dt>Direct transfers</dt>
 <dd></dd>
 <dt>Amounts not eligible for transfer</dt>
@@ -463,7 +463,6 @@
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/lump-payments.html">Lump-sum payments</a></p>     
 <ul>
-<li><strong>Non-registered plan</strong> – You have to identify pension benefits you paid from a pension fund or plan that is not registered.&nbsp;Report the amount in box&nbsp;<strong>018</strong>. Also, in &quot;Other information&quot;, enter code&nbsp;<strong>190</strong> and the amount of the payment</li>
 <li>If you include <strong>lump-sum payments</strong> out of <abbr title="registered pension plan">RPP</abbr>s and DPSPs accrued to December&nbsp;31,&nbsp;1971, report the amount in box&nbsp;<strong>018</strong>, in &quot;Other information, enter code&nbsp;<strong>110</strong> and the amount of the payment</li>
 <li><strong>Direct transfers </strong>– Do not include direct transfers of RPP lump-sum payments to <abbr title="registered retirement savings plan">RRSP</abbr>s, <abbr title="simplified pension plan">SPP</abbr>s, <abbr title="pooled registered pension plan">PRPP</abbr>s, <abbr title="registered retirement income fund">RRIF</abbr>s, or other RPPs that are transferred according to subsections&nbsp;147.3(1) to (8) of the Income Tax Act (ITA). Similarly, do not report direct transfers of DPSP <span class="nowrap">lump-sum</span> payments to&nbsp;RRSPs, SPPs, PRPPs, RRIFs, or other DPSPs that are transferred according to subsection&nbsp;147(19) of the ITA. These amounts are not reported when they are directly transferred under these subsections, and the receiving carrier should not issue receipts. You can use <a href="/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151, Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>, to document these direct transfers</li>
 <li><strong>Amounts not eligible for transfer</strong> – Amounts transferred that are&nbsp;greater than the amounts allowed under subsections&nbsp;147.3(1) to (8) or 147(19) of the&nbsp;ITA are considered income in the year they are transferred. Report such amounts in box&nbsp;<strong>018</strong>. The receiving carrier should issue a receipt for these excess transfers<br>
@@ -889,8 +888,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
  </li>
 <li class="code-num">
-<details>  <summary>Code 190 – Lump-sum payments from an unregistered plan</summary> 
-  <p  id="cd190">Learn more: Box 018 - Lump-sum payments.</p> 
+<details>  <summary>Code 190 – Lump-sum payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
+<p  id="cd190">Report the payments you made from a pension fund or plan that is not registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
  </details> 
 </li>
 <li class="code-num">
