--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -241,7 +241,7 @@ CANADA</p>
 	</ul>-->
 			
 	 <div class="clear"></div>	
-	<h3>After you submit your feedback</h3>
+	<h3>After you submit your service feedback</h3>
 	<p>Once we receive your feedback it will be forwarded to the:</p>
 		<ul>
 			<li>Responsible manager and/or employee for recognition</li>
