--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -115,8 +115,8 @@
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
 	<h2 id="toc1">Feedback about service you received</h2>
 
-	<h3>Options to submit service feedback</h3>
-	<p>Steps to provide service feedback to the CRA:</p>
+	<h3>Steps to submit service feedback</h3>
+	
 	<ol class="lst-stps">
 <li><h4>Contact the CRA</h4>
 	<p>First try to resolve your concerns by calling the: </p>
