--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -72,7 +72,7 @@
 <li><a href="#toc0">Types of feedback</a></li>
     <li><a href="#toc1">Feedback about service you received</a></li>
     <li><a href="#toc3">Non-service feedback</a></li>
-    <li><a href="#toc34">Your rights</a></li>
+    <li><a href="#toc34">Your rights as a taxpayer</a></li>
   
  
   </ul>
