--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -32,6 +32,7 @@
 <link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/theme.min.css"/>
 <link href="/etc/designs/canada/wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon"/>
 <noscript><link rel="stylesheet" href="/etc/designs/canada/wet-boew/css/noscript.min.css"/></noscript>
+			   <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/méli-mélo/2022-06-banff.min.css"/>
 		   </head>
 		   <body vocab="http://schema.org/" typeof="WebPage" class="cnt-wdth-lmtd">
 <div id="def-top"> </div>
