--- a/payroll/file/distribute.html
+++ b/payroll/file/distribute.html
@@ -118,15 +118,13 @@ You <strong>must </strong>provide your employees or recipients with their slips 
 <h2 id="h_2">Which method to use</h2>
 
 <dl class="dl-horizontal">
-<dt>Email</dt><dd>
-<p><span class="label label-warning">New - On or after January 1, 2021</span> You can distribute T4, T4A, T5 or FHSA slips by email. If you distribute by email, you <strong>must </strong>receive written consent from employees or recipients before sending the slips by email.</p>
-</dd>
-<dt> Employer or payer's electronic portal</dt><dd>
-<p><span class="label label-warning">New - On or after January 1, 2021</span> You can distribute T4, T4A, T5 or FHSA slips using an employer or payer's electronic portal. If you distribute using an employer or payer's electronic portal, you <strong>must</strong>:</p>
-
+<dt>Email or electronic portal</dt>
+<dd>
+<p><span class="label label-warning">New</span> You can distribute T4, T4A, T5 or FHSA slips by email or using an employer or payer's <strong>secure</strong> electronic portal <strong>without</strong> obtaining written or electronic consent from the employees or recipients before distributing the slips, <strong>unless any</strong> of the following apply:</p>
 <ul>
-<li>Make the slips accessible to your employees or recipients on a <strong>secure </strong>portal and with a <strong>secure </strong>printer. </li>
-<li>Provide your employee or the recipient the option for paper copies. </li>
+<li>The employee or recipient requested for the slips to be provided in paper copy</li>
+<li>The employee or recipient cannot reasonably be expected to have access to the slips in electronic format at the time the slips are issued </li>
+<li>If you distribute T4 slips, the employee is on extended leave or is a former employee at the time they are issued</li>
 </ul>
 </dd>
 <dt>Paper</dt><dd>
