--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -1836,8 +1836,8 @@
 				<li>Employee’s contributions to a retirement compensation arrangement (RCA) or certain pension plans</li>
 				<li>Employee’s and employer’s contributions (deducted at source) to a registered retirement savings plan (RRSP) provided you have reasonable grounds to believe the employee can deduct the contribution for the year</li>
 				<li>Employee contributions to a pooled registered pension plan (PRPP), or a similar provincial pension plan, as long as the plan is registered with the Minister of National Revenue and you have reasonable grounds to believe the employee can deduct the contribution for the year</li>
-				<li><span class="label label-info">Beginning January 1, 2023</span> First and second additional contributions to the CPP made by the employee</li>
-				<li><span class="label label-info">Beginning April 1, 2023</span> Employee’s and employer’s contributions (deducted at source) to a First Home Savings Account (FHSA) and you have reasonable grounds to believe the employee can deduct the contribution for the year </li>
+				<li><span class="label label-warning">Beginning January 1, 2023</span> First and second additional contributions to the CPP made by the employee</li>
+				<li><span class="label label-warning">Beginning April 1, 2023</span> Employee’s and employer’s contributions (deducted at source) to a First Home Savings Account (FHSA) and you have reasonable grounds to believe the employee can deduct the contribution for the year </li>
 				
 			</ul></details></div></span>
           
