--- a/payroll/file/how.html
+++ b/payroll/file/how.html
@@ -213,7 +213,7 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 
 <ul>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/agr-1.html">AGR-1, Statement of Farm-support Payments</a> </li>
-<li><span class="label label-warning">New - Effective April 1, 2023</span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/what-happens-contribute-transfer-too-much.html"> First Home Savings Account (FHSA) Annual Information Return </a> </li>
+<li><span class="label label-warning">Beginning April 1, 2023</span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/what-happens-contribute-transfer-too-much.html"> First Home Savings Account (FHSA) Annual Information Return </a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/nr4.html">NR4, Statement of Amounts Paid or Credited to Non-Residents of Canada</a> </li>
 
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/completing-slips-summaries/financial-slips-summaries/partxix-information-return-international-exchange-information-financial-accounts-slips-summary.html">Part XVIII Information Return &ndash; International Exchange of Information on Financial Accounts</a> </li>
