--- a/payroll/file/how.html
+++ b/payroll/file/how.html
@@ -252,7 +252,7 @@ You <strong>must</strong> <a href="#h_1_2_2">file by paper</a></dd>
 <tbody>
 
 <tr>
-	<td>6 to 50 <span class="label label-warning">New - Returns filed on or after January 1, 2024</span></td>
+	<td>6 to 50 <span class="label label-warning">Returns filed on or after January 1, 2024</span></td>
 	<td>$125  </td>
 </tr>
 
