--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
@@ -166,7 +166,7 @@
 <h3>Enhanced rate</h3>
 <p>Most Canadian controlled private corporations (CCPCs), whether stand-alone or associated, may earn an ITC on qualified SR&ED expenditures up to a maximum threshold of $3 million (expenditure limit) at the enhanced rate of 35%.</p>
 <p>Any qualified  expenditures <strong>beyond the expenditure limit  earn an ITC at the basic rate of 15%</strong>. </p>
-<p>If a CCPC is a  qualifying corporation, 40% of the ITC earned at 15% can be refunded.</p>
+
 
 <details>             
 <summary>What is a qualifying corporation</summary>
@@ -195,7 +195,7 @@
 <p>For detailed information about associated corporations, review <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4012/t2-corporation-income-tax-guide-chapter-2-page-2-t2-return.html#P920_78532">Schedule 9, Related and Associated Corporations.</a></p>
 <h2 id="h4">Refundable ITC</h2>
 <p>Claimants may be able to have some or all of their SR&amp;ED ITC refunded. If there is no tax payable, the ITC earned for the year may be refunded.</p>
-<p>Most CCPCs can earn a refundable ITC calculated at the enhanced rate of 35% on qualified expenditures up to their expenditure limit for the tax year. Individuals may get a partial refund of their ITC earned at 15%. Generally an  ITC can only be refunded in the year that the qualified expenditure occurred.</p>
+<p>Most CCPCs can earn a refundable ITC calculated at the enhanced rate of 35% on qualified expenditures up to their expenditure limit for the tax year. Individuals may get a partial refund of their ITC earned at 15%. If a CCPC is a  qualifying corporation, 40% of the ITC earned at 15% can be refunded. Generally, an  ITC can only be refunded in the year that the qualified expenditure occurred.</p>
 <p>The refund rate varies depending on if the claimant is a corporation, an individual, a trust, or a partner in a partnership.</p>
 <details>             
 <summary>Review  ITC rates and refund rates</summary>
