--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -260,7 +260,7 @@ CANADA</p>
 		
 
 	
-	<h2 id="toc3">Your rights</h2>
+	<h2 id="toc3">Your rights as a taxpayer</h2>
 <p>You can expect to be treated fairly and get a high level of service each time you deal with the CRA. All information you give to the CRA will be treated as confidential under the Privacy Act.</p>
 	<p>For details:  <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/taxpayer-bill-rights.html">Taxpayer Bill of Rights</a></p>
 	
