--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -65,7 +65,7 @@
 	<h2 class="h3">On this page</h2> 
   <ul>
 <li><a href="#toc0">Types of feedback</a></li>
-    <li><a href="#toc1">Feedback about service you received</a></li>
+    <li><a href="#toc1">Service feedback</a></li>
     <li><a href="#toc3">Non-service feedback</a></li>
     <li><a href="#toc34">Your rights as a taxpayer</a></li>
   
@@ -108,7 +108,7 @@
 	<p>You can submit a feedback on a suggestion about improving the CRA service(s). Your feedback will be forwarded to the appropriate office or program area for consideration. A service feedback officer may contact you by phone or by mail as part of the review process.</p>
 	<h3>Complaint</h3>
 	<p>You can submit feedback about a complaint about the service that you received from the CRA. When reviewing your complaint, a service feedback officer may contact you by phone or by mail. How long it takes to resolve your complaint depends on the complexity of the situation.</p>-->
-	<h2 id="toc1">Feedback about service you received</h2>
+	<h2 id="toc1">Service feedback</h2>
 
 	<h3>Steps to submit service feedback</h3>
 	
