--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -440,12 +440,12 @@
  <h4>Special situations</h4>
 <dl class="dl-horizontal">
 <dt>DPSP payments</dt>
-<dd><p>Report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan to a person for:</p>
+<dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a DPSP or a revoked plan to a person for:</p>
 <ul>
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
 </ul>
-<p><strong>Do not</strong> report the amount of the payment if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
+<p><strong>Do not</strong> report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
 </dd>
 <dt>Non-registered plan</dt>
 <dd>Report the payments you made from a pension fund or plan that is not registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
@@ -882,9 +882,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd180">Report the amount of the payment if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
+ <p id="cd180">Report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
 
-<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated in the year under a DPSP or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
+<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>dring the year</strong> under a DPSP or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
  </details> 
  </li>
 <li class="code-num">
