--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -439,8 +439,8 @@
 
  <h4>Special situations</h4>
 <dl class="dl-horizontal">
-<dt>DPSP payments</dt>
-<dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a DPSP or a revoked plan to a person for:</p>
+<dt><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</dt>
+<dd><p>Report the amount of the payments you allocated or reallocated <strong>during the year </strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan to a person for:</p>
 <ul>
 <li>Employer contributions made to the plan after December 1, 1982</li>
 <li>Amounts forfeited in the plan if these amounts are withdrawn from the plan during the year</li>
@@ -448,7 +448,9 @@
 <p><strong>Do not</strong> report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using box 018, use <a href="#cd180">code 180</a>. </p>
 </dd>
 <dt>Non-registered plan</dt>
-<dd>Report the payments you made from a pension fund or plan that is not registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
+<dd>Report the payments you made from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
+<dt>Lump-sum payments – Accrued to December 31, 1971</dt>
+<dd>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
 <dt>Direct transfers</dt>
 <dd></dd>
 <dt>Amounts not eligible for transfer</dt>
@@ -462,8 +464,8 @@
 </dl>
 
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/lump-payments.html">Lump-sum payments</a></p>     
+
 <ul>
-<li>If you include <strong>lump-sum payments</strong> out of <abbr title="registered pension plan">RPP</abbr>s and DPSPs accrued to December&nbsp;31,&nbsp;1971, report the amount in box&nbsp;<strong>018</strong>, in &quot;Other information, enter code&nbsp;<strong>110</strong> and the amount of the payment</li>
 <li><strong>Direct transfers </strong>– Do not include direct transfers of RPP lump-sum payments to <abbr title="registered retirement savings plan">RRSP</abbr>s, <abbr title="simplified pension plan">SPP</abbr>s, <abbr title="pooled registered pension plan">PRPP</abbr>s, <abbr title="registered retirement income fund">RRIF</abbr>s, or other RPPs that are transferred according to subsections&nbsp;147.3(1) to (8) of the Income Tax Act (ITA). Similarly, do not report direct transfers of DPSP <span class="nowrap">lump-sum</span> payments to&nbsp;RRSPs, SPPs, PRPPs, RRIFs, or other DPSPs that are transferred according to subsection&nbsp;147(19) of the ITA. These amounts are not reported when they are directly transferred under these subsections, and the receiving carrier should not issue receipts. You can use <a href="/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151, Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>, to document these direct transfers</li>
 <li><strong>Amounts not eligible for transfer</strong> – Amounts transferred that are&nbsp;greater than the amounts allowed under subsections&nbsp;147.3(1) to (8) or 147(19) of the&nbsp;ITA are considered income in the year they are transferred. Report such amounts in box&nbsp;<strong>018</strong>. The receiving carrier should issue a receipt for these excess transfers<br>
 If you paid a single amount out of an RPP or a DPSP to an individual or you transferred such an amount that we consider to be income, you must report this amount in Other information, using code&nbsp;<strong>108</strong> for an RPP and code <strong>180</strong> for a DPSP</li>
@@ -686,7 +688,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </li>
 <li class="code-num">
  <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span></summary> 
-  <p id="cd110">Learn more: Special situations, box 018&nbsp;–&nbsp; Lump-sum payments</p> 
+  <p id="cd110"><p>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using code 110 <strong>and</strong> <a href="#bx018">box 018</a>. </p>
+
  </details> 
  </li>
 <li class="code-num">
@@ -696,7 +699,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </li>
 <li class="code-num">
  <details >  <summary>Code 115 –&nbsp;Deferred profit sharing plan (DPSP) annuity or instalment payments <span class="label label-warning">Jeremiah</span></summary> 
-  <p id="cd115">Report instalment or annuity payments you made under a DPSP using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
+  <p id="cd115">Report instalment or annuity payments you made under a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 115 <strong>and</strong> <a href="#bx024">box 024</a>. </p>
  </details> 
 </li>
 <li class="code-num">
@@ -884,12 +887,12 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer <span class="label label-warning">Jeremiah</span></summary> 
  <p id="cd180">Report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year.</p>
 
-<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>dring the year</strong> under a DPSP or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
+<p><strong>Do not</strong> report the amount of the payments you allocated or reallocated <strong>dring the year</strong> under a <abbr title="Deferred profit sharing plan">DPSP</abbr> or a revoked plan using code 180, use <a href="#bx018">box 018</a>. </p>
  </details> 
  </li>
 <li class="code-num">
 <details>  <summary>Code 190 – Lump-sum payments from an unregistered plan <span class="label label-warning">Jeremiah</span></summary> 
-<p  id="cd190">Report the payments you made from a pension fund or plan that is not registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
+<p  id="cd190">Report the payments you made from a pension fund or plan that is <strong>not</strong> registed using code 190 <strong>and</strong> <a href="#bx018">box 018</a>. </p> 
  </details> 
 </li>
 <li class="code-num">
