--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -451,8 +451,6 @@
 <dd>Report the payments you made from a pension fund or plan that is <strong>not</strong> registed using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 <dt>Lump-sum payments – Accrued to December 31, 1971</dt>
 <dd>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using box 018 <strong>and</strong> <a href="#cd110">code 110</a>. </dd>
-<dt>Direct transfers</dt>
-<dd></dd>
 <dt>Amounts not eligible for transfer</dt>
 <dd></dd>
 <dt>Lump-sum payments – Non-resident</dt>
@@ -460,6 +458,8 @@
 <dt>Lump-sum payments that you cannot transfer, that are not reported elsewhere</dt>
 <dd></dd>
 <dt>Lump-sum payments - Indian (exempt income)</dt>
+<dd></dd>
+<dt>Direct transfers</dt>
 <dd></dd>
 </dl>
 
@@ -687,7 +687,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
  </li>
 <li class="code-num">
- <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span></summary> 
+ <details >  <summary>Code 110 – Lump-sum payments accrued to <span class="nowrap">December 31, 1971</span> <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd110"><p>Report lump-sum payments you made out of <abbr title="registered pension plan">RPP</abbr>s and <abbr title="Deferred profit sharing plan">DPSP</abbr>s accrued to December 31, 1971 using code 110 <strong>and</strong> <a href="#bx018">box 018</a>. </p>
 
  </details> 
