--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -487,20 +487,26 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 				<li class="box-num">  	 
                          
      <details>    <summary>Box 024 – Annuities <span class="label label-warning">In progress</span></summary>
-         <p id="bx024">Report payments from an annuity that an individual bought with a refund of premiums from a deceased annuitant's RRSP.</p>
-<p>Report annuity payments from a life annuity purchased from the proceeds of a life income fund or from the proceeds of a registered retirement income fund.</p>
-<p>Report only annuity payments from an Advanced life deferred annuity in box <strong>024</strong>, see ALDA purchases in code&nbsp;037</p>
-<p>If you include annuity payments under an income-averaging annuity contract, also report the amount of the payments in Other information, using code <strong>111</strong>.</p>
-<p>If you include instalment or annuity payments under a DPSP, also report the amount of the payment in Other information, using code <strong>115</strong>. </p>
-<p>The taxable part of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity should be reported in box 016 instead of box <strong>024</strong>.</p>
-
- <p>Report on a <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>&nbsp;the annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section&nbsp;12.2 of the <abbr title="Income Tax Act">ITA</abbr>.</p>
-<p>Report annuity payments to a non-resident on an <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</p>
-
- <h4>Special situations</h4>
+        
+ <h4 id="bx024">Specific situations</h4>
 <dl class="dl-horizontal">
-<dt>DPSP payments</dt>
-<dd>Report instalment or annuity payments you made under DPSP using code 24 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
+<dt>Deceased annuitant's <abbr title="Registered retirement savings plan">RRSP</abbr></dt>
+<dd>Report payments from an annuity that an individual bought with a refund of premiums from a deceased annuitant's RRSP.</dd>
+<dt><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</dt>
+<dd>Report instalment or annuity payments you made under <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 024 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
+<dt>Life income fund or registered retirement income fund</dt>
+<dd>Report annuity payments from a life annuity purchased from the proceeds of a life income fund or from the proceeds of a registered retirement income fund.</dd>
+<dt>Advanced life deferred</dt>
+<dd><p>Report only annuity payments from an Advanced life deferred annuity in box <strong>024</strong>, see ALDA purchases in code&nbsp;037</p>
+</dd>
+<dt>Income-averaging annuity contract</dt>
+<dd><p>If you include annuity payments under an income-averaging annuity contract, also report the amount of the payments in Other information, using code <strong>111</strong>.</p></dd>
+<dt>Superannuation or pension fund or plan</dt>
+<dd><p>The taxable part of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity should be reported in box 016 instead of box <strong>024</strong>.</p></dd>
+<dt>Life insurance policy </dt>
+<dd> <p>Report on a <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>&nbsp;the annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section&nbsp;12.2 of the <abbr title="Income Tax Act">ITA</abbr>.</p></dd>
+<dt>Non-residents</dt>
+<dd><p>Report annuity payments to a non-resident on an <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</p></dd>
 </dl>
  
 <p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/annuities.html">Annuity payments </a> </p>
