--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -338,7 +338,7 @@
                 </details>           
  </li>
 				<li class="box-num">  	
- <details><summary><span class="label label-warning">New - T4A slips filed on or after calendar year 2024</span> Box 015 – Payer-offered dental benefits (PODB)</summary>
+ <details><summary><span class="label label-warning">T4A slips filed on or after calendar year 2024</span> Box 015 – Payer-offered dental benefits (PODB)</summary>
 <p id="bx015">For T4A slips filed on or after calendar year 2024, if you <strong>provided access to any dental care insurance or for coverage of dental services of any kind</strong> to a recipient, enter the appropriate code from the following list to indicate the level of access to services you provided:</p>
    
 <div class="table-responsive section">
