--- a/fhsa/index.html
+++ b/fhsa/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-      <title>Taxes – Canada.ca</title>
+      <title>First Home Savings Account (FHSA) – Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport">
       <meta name=”robots” content=”noindex”>
       <!-- Meta data -->
@@ -47,26 +47,12 @@
       </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
 
-  <h1 property="name" id="wb-cont">Taxes</h1>
+  <h1 property="name" id="wb-cont">First Home Savings Account (FHSA)</h1>
   <div class="container">
-    <!-- <section data-ajax-replace="/content/dam/cra-arc/includes/covid19-t4a.txt#t4a-eng" class="wb-init wb-data-ajax-replace-inited" id="wb-auto-4"> -->
-      <section class="alert alert-warning">
-        <h2 class="h5"><span class="nowrap">COVID-19:</span> Changes to taxes and benefits</h2>
-        <p>Find out about <a href="/content/canadasite/en/revenue-agency/campaigns/covid-19-update.html">new benefits and other changes</a> that support Canadians during the <span class="nowrap">COVID-19</span> pandemic.</p>
-      </section>
-    <!-- </section> -->
+   
   </div>
-  <p class="tagline">Tax information for individuals, businesses, charities, and trusts.</p>
-  <section class="band band-default most-requested">
-    <div class="container">
-      <h2>Most requested</h2>
-      <ul class="lst-spcd colcount-sm-2">
-        <li><a href="../sign-in/index.html">Sign in to a CRA account</a></li>
-        <li><a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/gst-hst-netfile.html">File a GST/HST return (NETFILE)</a></li>
-        <li><a href="https://www.canada.ca/en/revenue-agency/services/payments-cra.html">Make a payment to the CRA</a></li>
-        <li><a href="https://www.canada.ca/en/services/benefits/calendar.html">Find the next benefit payment date</a></li>
-        <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/line-22900-other-employment-expenses/work-space-home-expenses.html">Home office expenses for employees</a></li>
-		</ul>
+  <p class="tagline">A first home savings account (FHSA) is a registered plan allowing you, as a prospective first-time home buyer, to save for your first home tax-free (up to certain limits). You can open an FHSA starting <strong>April 1, 2023</strong>.</p>
+  
     </div>
   </section>
   <section class="gc-srvinfo">
@@ -75,8 +61,8 @@
     <div class="wb-eqht row">
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Income tax</a></h3>
-          <p>Personal, corporation, and trust income tax</p>
+          <h3><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Opening and closing your FHSAs</a></h3>
+          <p>Who is eligible to open an FHSA and when to close your account</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
