--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -175,11 +175,11 @@
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/qualifying-retroactive-lump-payments.html">Qualifying retroactive lump-sum payments</a>  </td>
+                           <td><a href="lump-sum-qua.html">Qualifying retroactive lump-sum payments</a>  </td>
                            <td>Type of remuneration </td>
                         </tr>
                         <tr>
-                           <td><p><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/lump-payments.html">Lump-sum payments</a></p>
+                           <td><p><a href="lumpsum.html">Lump-sum payments</a></p>
 						   <p>Includes:</p> 
 						   <ul class="colcount-md-3"><li>Single payments</li><li>RRSP payments</li><li>RPP payments</li><li> DPSP payments</li><li> RRIF payments</li></ul></td>
                            <td>Type of remuneration </td>
