--- a/fhsa/index.html
+++ b/fhsa/index.html
@@ -67,50 +67,52 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST</a></h3>
-          <p>Register for the GST/HST; collect, file and remit the GST/HST; rebates, credits, and the GST/HST listing</p>
+          <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Participating in your FHSAs</a></h3>
+          <p>How much you can contribute or transfer to your FHSAs, and how much unused FHSA participation room you can carry forward</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll.html">Payroll</a></h3>
-          <p>Payroll accounts; deductions and contributions; information returns; and benefits and allowances</p>
+          <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll.html">Transfers between FHSAs and other registered plans</a></h3>
+          <p>How much can be transferred directly to and from your FHSAs</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/business-number.html">Business number registration</a></h3>
-          <p>When you need a number or program account, how to register, make account changes, and other government programs</p>
+          <h3><a href="https://www.canada.ca/en/services/taxes/business-number.html">Withdrawals from your FHSAs</a></h3>
+          <p>Withdrawals from your FHSAs to buy a qualifying home or for other reasons, and possible tax consequences</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/savings-and-pension-plans.html">Savings and pension plans</a></h3>
-          <p>Tax-free savings accounts, registered savings plans, pooled pension plans, and plan administrators</p>
+          <h3><a href="https://www.canada.ca/en/services/taxes/savings-and-pension-plans.html">Tax deductions for FHSA contributions</a></h3>
+          <p>How much of your FHSA contributions you can deduct on your income tax and benefit return, and how much of your unused FHSA contributions you can deduct in future years</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/child-and-family-benefits.html">Child and family benefits</a></h3>
-          <p>Payment dates, Canada child benefit, Children’s special allowance, GST/HST credit, and other benefits</p>
+          <h3><a href="https://www.canada.ca/en/services/taxes/child-and-family-benefits.html">What happens if you contribute or transfer too much to your FHSAs</a></h3>
+          <p>Taxes you may need to pay and how to reduce or eliminate your excess FHSA amount</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies.html">Excise taxes, duties, and levies</a></h3>
-          <p>Customs, excise taxes and duties, softwood lumber, air travellers’ security charge, and cannabis duty</p>
+          <h3><a href="https://www.canada.ca/en/services/taxes/excise-taxes-duties-and-levies.html">Non-residents and FHSAs</a></h3>
+          <p>What happens if you are or become a non-resident of Canada</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/charities.html">Charities and giving</a></h3>
-          <p>Charities listings, charity registration and operation, and charitable tax credits</p>
+          <h3><a href="https://www.canada.ca/en/services/taxes/charities.html">Breakdown of marriage or common-law partnership and FHSAs</a></h3>
+          <p>What happens if you are required to distribute amounts from your FHSAs on breakdown of your marriage or common-law partnership
+
+</p>
         </section>
 	 </div>	  
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/make-a-service-complaint.html">Service feedback</a></h3>
-          <p>Feedback, comments, complaints, Taxpayers' Ombudsperson</p>
+          <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/make-a-service-complaint.html">Death and FHSAs</a></h3>
+          <p>What happens to an FHSA when the FHSA holder dies, including tax implications for the deceased holder, survivor, and other FHSA beneficiaries</p>
         </section>	    
 	    </div>
    </section> 
