--- a/fhsa/index.html
+++ b/fhsa/index.html
@@ -117,6 +117,13 @@
 	    </div>
    </section> 
 	      
+	  <div class="col-lg-4 col-md-6">
+        <section>
+          <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/make-a-service-complaint.html">Definitions for FHSAs</a></h3>
+        </section>	    
+	    </div>
+   </section> 
+	  
       </div>
     </div>
   </section>
