--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -195,7 +195,7 @@
 
                       
                         <tr>
-                           <td><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/pension-superannuation.html">Payments related to pension or superannuation</a> </td>
+                           <td><a href="pension.html">Payments related to pension or superannuation</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
                      
