--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -379,8 +379,6 @@
  <details><summary>Box 016 – Pension or superannuation <span class="label label-warning">In progress</span></summary>
           <p id="bx016">Report the amount for the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or registered pension fund or plan, including disability benefits paid&nbsp;as a life annuity.</p>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/pension-superannuation.html">Pension or superannuation</a></p>         
-
  <h4>Special situations</h4>
 <dl class="dl-horizontal">
 <dt>Unregistered pension plan</dt>
@@ -397,6 +395,7 @@
 <dd></dd>
 
 </dl>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/pension.html">Payments related to pension or superannuation</a></p>         
 
 <ul>
 <li>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</li>
@@ -463,7 +462,7 @@
 <dd></dd>
 </dl>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/lump-payments.html">Lump-sum payments</a></p>     
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/lumpsum.html">Lump-sum payments</a></p>     
 
 <ul>
 <li><strong>Direct transfers </strong>– Do not include direct transfers of RPP lump-sum payments to <abbr title="registered retirement savings plan">RRSP</abbr>s, <abbr title="simplified pension plan">SPP</abbr>s, <abbr title="pooled registered pension plan">PRPP</abbr>s, <abbr title="registered retirement income fund">RRIF</abbr>s, or other RPPs that are transferred according to subsections&nbsp;147.3(1) to (8) of the Income Tax Act (ITA). Similarly, do not report direct transfers of DPSP <span class="nowrap">lump-sum</span> payments to&nbsp;RRSPs, SPPs, PRPPs, RRIFs, or other DPSPs that are transferred according to subsection&nbsp;147(19) of the ITA. These amounts are not reported when they are directly transferred under these subsections, and the receiving carrier should not issue receipts. You can use <a href="/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151, Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>, to document these direct transfers</li>
@@ -509,7 +508,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <dd><p>Report annuity payments to a non-resident on an <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</p></dd>
 </dl>
  
-<p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/annuities.html">Annuity payments </a> </p>
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
 
                 </details>
             </li>
