--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -480,7 +480,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
      <details> <summary>Box 020 – Self-employed commissions</summary>
  <p id="bx020">Report the amount of commissions you paid to an independent agent. </p>
 <p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 020.</p>  
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/self-employed-commissions.html">Self-employed commissions</a></p>         
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/commission.html">Commission payments</a></p>         
       </details>
           </li>
 				<li class="box-num">  	 
@@ -490,7 +490,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  <h4 id="bx024">Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Deceased annuitant's <abbr title="Registered retirement savings plan">RRSP</abbr></dt>
-<dd>Report payments from an annuity that an individual bought with a refund of premiums from a deceased annuitant's RRSP.</dd>
+<dd>Report payments from an annuity that an individual bought with a refund of premiums from a deceased annuitant's RRSP using box 024.</dd>
 <dt><abbr title="Deferred profit sharing plan">DPSP</abbr> payments</dt>
 <dd>Report instalment or annuity payments you made under <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 024 <strong>and</strong> <a href="#cd115">code 115</a>. </dd>
 <dt>Life income fund or registered retirement income fund</dt>
@@ -503,9 +503,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <dt>Superannuation or pension fund or plan</dt>
 <dd><p>The taxable part of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity should be reported in box 016 instead of box <strong>024</strong>.</p></dd>
 <dt>Life insurance policy </dt>
-<dd> <p>Report on a <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>&nbsp;the annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section&nbsp;12.2 of the <abbr title="Income Tax Act">ITA</abbr>.</p></dd>
+<dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
 <dt>Non-residents</dt>
-<dd><p>Report annuity payments to a non-resident on an <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</p></dd>
+<dd><strong>Do not</strong> report annuity payments to a non-resident on an T4A slip, use the <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</dd>
 </dl>
  
 <p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/annuity.html">Annuity payments </a> </p>
