--- a/fhsa/index.html
+++ b/fhsa/index.html
@@ -137,9 +137,9 @@
             <h3 class="provisional from">From:</h3>
         </div>
         <div class="provisional contributors col-md-auto">
-            <ul>
-                <li><a href="/en/revenue-agency.html">Canada Revenue Agency</a></li>
-            </ul>
+            
+               <a href="/en/revenue-agency.html">Canada Revenue Agency</a>
+            
         </div>
     </section>
     <section class="col-md-4 mrgn-bttm-sm">
