--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -498,8 +498,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <dt>Advanced life deferred</dt>
 <dd><p>Report only annuity payments from an Advanced life deferred annuity in box <strong>024</strong>, see ALDA purchases in code&nbsp;037</p>
 </dd>
-<dt>Income-averaging annuity contract</dt>
-<dd><p>If you include annuity payments under an income-averaging annuity contract, also report the amount of the payments in Other information, using code <strong>111</strong>.</p></dd>
+<dt><abbr title="Income-averaging annuity contract">IAAC</abbr></dt>
+<dd>Report annuity payments you made under an <abbr title="income-averaging annuity contract">IAAC</abbr> using box 024 <strong>and</strong> <a href="#cd111">code 111</a>. </dd>
 <dt>Superannuation or pension fund or plan</dt>
 <dd><p>The taxable part of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity should be reported in box 016 instead of box <strong>024</strong>.</p></dd>
 <dt>Life insurance policy </dt>
@@ -698,8 +698,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
  </li>
 <li class="code-num">
- <details >  <summary>Code 111 – Income averaging annuity contracts (IAAC)</summary> 
-  <p id="cd111">Learn more: Box 024 – Annuities</p> 
+ <details >  <summary>Code 111 – Income averaging annuity contracts (IAAC) <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd111">Report annuity payments you made under an <abbr title="income-averaging annuity contract">IAAC</abbr> using code 111 <strong>and</strong> <a href="#bx024">box 024</a>. </dd>
+
  </details> 
 </li>
 <li class="code-num">
