--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -500,8 +500,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </dd>
 <dt><abbr title="Income-averaging annuity contract">IAAC</abbr></dt>
 <dd>Report annuity payments you made under an <abbr title="income-averaging annuity contract">IAAC</abbr> using box 024 <strong>and</strong> <a href="#cd111">code 111</a>. </dd>
-<dt>Superannuation or pension fund or plan</dt>
-<dd><p>The taxable part of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity should be reported in box 016 instead of box <strong>024</strong>.</p></dd>
+<dt>Pension or superannuation</dt>
+<dd><strong>Do not</strong> report annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or pension fund or plan, including disability benefits paid&nbsp;as a life annuity, use <a href="#bx016">box 016</a>.</dd>
 <dt>Life insurance policy </dt>
 <dd><strong>Do not</strong> report annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income, use the <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>.</dd>
 <dt>Non-residents</dt>
